--- a/src/pages/Courses.css
+++ b/src/pages/Courses.css
@@ -22,7 +22,7 @@
 
 .course-card {
     background: rgba(255, 255, 255, 0.702);
-    border-radius: var(--cardRadius);
+    border-radius: var(--themeBorderRadius);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: default;
     max-width: 20em;
@@ -30,10 +30,10 @@
     /* height: 10em; */
     padding: 0.8em 0.7em;
     transition: transform 0.2s, box-shadow 0.2s;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+    display: grid;
+    /* grid-template-rows: 1fr 2fr 1fr; */
+        /* justify-content: space-between; */
+    }
 
 .course-card:hover {
     /* transform: translateY(-0.8em); */
@@ -42,8 +42,8 @@
 }
 
 .course-card h2 {
-    color: var(--themeDarkRed);
-    margin-bottom: 1em;
+    color: var(--themeDarkBlue);
+        margin-bottom: 0.4em;
 }
 
 .course-card ul {
@@ -65,6 +65,9 @@
     direction: rtl;
 }
 
+div.onConstruction {
+    margin: 2em 3em;
+}
 
 .course-card ul li i {
     margin-right: 0.1em;
@@ -95,8 +98,8 @@
     padding: 1.1em 2em;
     border: 1px solid var(--themeGrey);
     border-radius: var(--buttonSquarishRadius);
-    background-color: var(--themeColorBG);
-    background-image: var(--themeBG_GradientLight);
+    /* background-color: var(--themeColorBG); */
+    /* background-image: var(--themeBG_GradientLight); */
 
 }
 
@@ -105,6 +108,15 @@
     font-weight: 600;
 }
 
+div.course-card div button#purchesButton {
+    background-color: var(--constThemeColor);
+    color: var(--themeColorText_DarkMode);
+}
+
+div.course-card div button#purchesButton:hover {
+    background-color: var(--ThemeGPTOrangeDeep);
+    color: var(--themeColorText);
+}
 
 .notify {
     font-style: italic;
